--- a/0.7.0/kargo/values.yaml
+++ b/0.7.0/kargo/values.yaml
@@ -142,7 +142,7 @@ api:
     enabled: true
     ## @param api.ingress.annotations Annotations specified by your ingress controller to customize the behavior of the ingress resource.
     annotations:
-      route.openshift.io/termination: "edge"
+      route.openshift.io/termination: "passthrough"
       # kubernetes.io/ingress.class: nginx
     ## @param api.ingress.ingressClassName From Kubernetes 1.18+, this field is supported if implemented by your ingress controller. When set, you do not need to add the ingress class as annotation.
     ingressClassName:
