--- a/0.7.0/kargo/templates/api/cert.yaml
+++ b/0.7.0/kargo/templates/api/cert.yaml
@@ -10,6 +10,7 @@ metadata:
 spec:
   dnsNames:
   - {{ quote .Values.api.host }}
+  - kargo-api.{{ .Release.Namespace }}.svc
   issuerRef:
     kind: Issuer
     name: kargo-selfsigned-cert-issuer
