--- a/0.7.0/kargo/values.yaml
+++ b/0.7.0/kargo/values.yaml
@@ -185,7 +185,7 @@ api:
     ## NOTE: Kargo uses the Authorization Code Flow with Proof Key for Code Exchange (PKCE) and does not require a client secret. Some OIDC identity providers may not support this. If yours does not, enabling the optional Dex server and configuring its connectors can adapt most identity providers to work this way.
     ## Note also: The PKCE code challenge used by Kargo is SHA256 hashed.
     ## For more information about PKCE, please visit: https://oauth.net/2/pkce/
-    enabled: false
+    enabled: true
     ## @param api.oidc.issuerURL The issuer URL for the identity provider. If Dex is enabled, this value will be ignored and the issuer URL will be automatically configured. If Dex is not enabled, this should be set to the issuer URL provided to you by your identity provider.
     issuerURL:
     ## @param api.oidc.clientID The client ID for the OIDC client. If Dex is enabled, this value will be ignored and the client ID will be automatically configured. If Dex is not enabled, this should be set to the client ID provided to you by your identity provider.
@@ -215,7 +215,7 @@ api:
 
     dex:
       ## @param api.oidc.dex.enabled Whether to enable Dex as the identity provider. When set to true, the Kargo installation will include a Dex server and the Kargo API server will be configured to make the /dex endpoint a reverse proxy for the Dex server.
-      enabled: false
+      enabled: true
 
       image:
         ## @param api.oidc.dex.image.repository Image repository of Dex
@@ -265,7 +265,17 @@ api:
       ## @param api.oidc.dex.skipApprovalScreen Whether to skip Dex's own approval screen. Since upstream identity providers will already request user consent, this second approval screen from Dex can be both superfluous and confusing.
       skipApprovalScreen: true
       ## @param api.oidc.dex.connectors Configure [Dex connectors](https://dexidp.io/docs/connectors/) to one or more upstream identity providers.
-      connectors: []
+      connectors: 
+      - config:
+          clientID: system:serviceaccount:kargo:kargo-dex-server
+          clientSecret: $oidc.dex.clientSecret
+          groups: []
+          insecureCA: true
+          issuer: https://kubernetes.default.svc
+          redirectURI: https://kargo-route-kargo.apps.apps-crc.testing/dex/callback
+        id: openshift
+        name: OpenShift
+        type: openshift
       # - id: mock
       #   name: Example
       #   type: mockCallback
