--- a/0.7.0/kargo/values.yaml
+++ b/0.7.0/kargo/values.yaml
@@ -274,7 +274,7 @@ api:
           groups: []
           insecureCA: true
           issuer: https://kubernetes.default.svc
-          redirectURI: https://kargo-route-kargo.apps.apps-crc.testing/dex/callback
+          redirectURI: https://kargo-api.kargo.svc/dex/callback
         id: openshift
         name: OpenShift
         type: openshift
