--- a/0.7.0/kargo/templates/webhooks-server/cert.yaml
+++ b/0.7.0/kargo/templates/webhooks-server/cert.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   dnsNames:
   - kargo-webhooks-server.{{ .Release.Namespace }}.svc
+  - kargo-webhooks-server
   issuerRef:
     kind: Issuer
     name: kargo-selfsigned-cert-issuer
