--- a/0.7.0/kargo/templates/api/route.yaml
+++ b/0.7.0/kargo/templates/api/route.yaml
@@ -22,6 +22,6 @@ spec:
     targetPort: 8080
   tls:
     termination: passthrough
-    insecureEdgeTerminationPolicy: Allow
+    insecureEdgeTerminationPolicy: None
   wildcardPolicy: None
 
