--- a/0.7.0/kargo/templates/api/service.yaml
+++ b/0.7.0/kargo/templates/api/service.yaml
@@ -16,7 +16,8 @@ metadata:
 spec:
   type: {{ .Values.api.service.type }}
   ports:
-  - protocol: TCP
+  - name: kargo-api
+    protocol: TCP
     {{- if .Values.api.tls.enabled }}
     port: 443
     {{- else }}
@@ -25,7 +26,7 @@ spec:
     {{- if and (or (eq .Values.api.service.type "NodePort") (eq .Values.api.service.type "LoadBalancer")) .Values.api.service.nodePort}}
     nodePort: {{ .Values.api.service.nodePort }}
     {{- end }}
-    targetPort: 8080
+    targetPort: h2c
   selector:
     {{- include "kargo.selectorLabels" . | nindent 4 }}
     {{- include "kargo.api.labels" . | nindent 4 }}
