--- a/0.7.0/kargo/templates/webhooks-server/service-account.yaml
+++ b/0.7.0/kargo/templates/webhooks-server/service-account.yaml
@@ -4,6 +4,8 @@ kind: ServiceAccount
 metadata:
   name: kargo-webhooks-server
   namespace: {{ .Release.Namespace }}
+  annotations:
+      serviceaccounts.openshift.io/oauth-redirecturi.dex: 'https://kargo-api-kargo.apps.apps-crc.testing/dex/callback'
   labels:
     {{- include "kargo.labels" . | nindent 4 }}
     {{- include "kargo.webhooksServer.labels" . | nindent 4 }}
