--- a/0.7.0/kargo/templates/api/deployment.yaml
+++ b/0.7.0/kargo/templates/api/deployment.yaml
@@ -9,6 +9,7 @@ metadata:
     {{- include "kargo.api.labels" . | nindent 4 }}
   {{- with (mergeOverwrite (deepCopy .Values.global.annotations) .Values.api.annotations) }}
   annotations:
+    argocd.argoproj.io/sync-wave: "10"
     {{- range $key, $value := . }}
     {{ $key }}: {{ $value | quote }}
     {{- end }}
