--- a/0.7.0/kargo/templates/api/service-account.yaml
+++ b/0.7.0/kargo/templates/api/service-account.yaml
@@ -4,6 +4,8 @@ kind: ServiceAccount
 metadata:
   name: kargo-api
   namespace: {{ .Release.Namespace }}
+  annotations:
+    serviceaccounts.openshift.io/oauth-redirecturi.kargo: 'https://{{ .Values.api.host }}/dex/callback'
   labels:
     {{- include "kargo.labels" . | nindent 4 }}
     {{- include "kargo.api.labels" . | nindent 4 }}
